--- a/package.json
+++ b/package.json
@@ -13,27 +13,28 @@
     "test:watch": "vitest"
   },
   "dependencies": {
+    "clsx": "2.1.1",
+    "fuse.js": "7.1.0",
+    "github-slugger": "2.0.0",
+    "gray-matter": "4.0.3",
     "next": "15.5.2",
+    "next-themes": "0.4.6",
     "react": "19.1.1",
     "react-dom": "19.1.1",
-    "next-themes": "0.4.6",
-    "clsx": "2.1.1",
-    "gray-matter": "4.0.3",
-    "zod": "4.1.5",
-    "remark": "15.0.1",
-    "remark-parse": "11.0.0",
-    "remark-gfm": "4.0.1",
+    "react-social-media-embed": "^2.5.18",
     "rehype": "13.0.2",
-    "rehype-slug": "6.0.0",
     "rehype-autolink-headings": "7.1.0",
     "rehype-prism-plus": "2.0.1",
     "rehype-raw": "7.0.0",
-    "remark-rehype": "11.1.2",
+    "rehype-slug": "6.0.0",
     "rehype-stringify": "10.0.1",
+    "remark": "15.0.1",
+    "remark-gfm": "4.0.1",
+    "remark-parse": "11.0.0",
+    "remark-rehype": "11.1.2",
     "unified": "11.0.5",
     "yaml": "2.8.1",
-    "fuse.js": "7.1.0",
-    "github-slugger": "2.0.0"
+    "zod": "4.1.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.13",
