--- a/data/links.yaml
+++ b/data/links.yaml
@@ -8,7 +8,6 @@
   desc: 日々の発信
   iconUrl: https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/twitter/twitter-original.svg
   category: Social
-# 追加SNS
 - title: Instagram
   url: https://www.instagram.com/iam_tatsuki05
   desc: 写真・日常
@@ -18,4 +17,9 @@
   url: https://www.linkedin.com/in/tatsuki-okada-186362224
   desc: 職務経歴・プロフィール
   iconUrl: https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/linked-in-alt.svg
+  category: Social
+- title: Huggingface
+  url: https://huggingface.co/iamtatsuki05
+  desc: モデル・データセット・アプリ
+  iconUrl: https://huggingface.co/front/assets/huggingface_logo-noborder.svg
   category: Social
