--- a/package.json
+++ b/package.json
@@ -5,13 +5,22 @@
   "packageManager": "bun@1.1.24",
   "scripts": {
     "dev": "bun scripts/ensure-favicon.ts && next dev",
+    "dev:test": "bun scripts/ensure-favicon.ts && next dev --port 3000",
     "build": "bun scripts/ensure-favicon.ts && next build && bun run gen:sitemap",
     "start": "serve out -p 3000",
     "lint": "next lint",
     "gen:sitemap": "bun scripts/generate-sitemap.ts",
     "optimize:images": "bun scripts/optimize-images.ts",
-    "test": "vitest run",
-    "test:watch": "vitest"
+    "vitest:run": "vitest run",
+    "vitest:watch": "vitest",
+    "e2e:run": "bun run e2e:install && bunx start-server-and-test \"bun run dev:test\" http://127.0.0.1:3000 \"CYPRESS_CACHE_FOLDER=.cache/cypress ./node_modules/.bin/cypress run --e2e --browser chrome --headless\"",
+    "e2e:open": "bun run e2e:install && bunx start-server-and-test \"bun run dev:test\" http://127.0.0.1:3000 \"CYPRESS_CACHE_FOLDER=.cache/cypress ./node_modules/.bin/cypress open --e2e\"",
+    "e2e:chrome": "CYPRESS_CACHE_FOLDER=.cache/cypress ./node_modules/.bin/cypress run --e2e --browser chrome --headless",
+    "e2e:edge": "CYPRESS_CACHE_FOLDER=.cache/cypress ./node_modules/.bin/cypress run --e2e --browser edge",
+    "e2e:electron": "CYPRESS_CACHE_FOLDER=.cache/cypress ./node_modules/.bin/cypress run --e2e --browser electron",
+    "e2e:firefox": "CYPRESS_CACHE_FOLDER=.cache/cypress ./node_modules/.bin/cypress run --e2e --browser firefox",
+    "e2e:install": "CYPRESS_CACHE_FOLDER=.cache/cypress bunx cypress install",
+    "test": "bun run vitest:run && bun run e2e:run"
   },
   "dependencies": {
     "clsx": "2.1.1",
@@ -46,11 +55,13 @@
     "@types/node": "24.3.1",
     "@types/react": "19.1.12",
     "@types/react-dom": "19.1.9",
+    "cypress": "15.2.0",
     "eslint": "9.35.0",
     "eslint-config-next": "15.5.2",
     "jsdom": "26.1.0",
     "postcss": "8.5.6",
     "serve": "14.2.5",
+    "start-server-and-test": "2.0.5",
     "tailwindcss": "^4.1.13",
     "typescript": "5.9.2",
     "vite-tsconfig-paths": "5.1.4",
