feat: implement caching mechanism for markdown parsing, publications, and links
- Added caching to `parseMarkdownFile` to improve performance by avoiding redundant file reads.
- Implemented caching in `getAllPublications` to optimize publication retrieval.
- Introduced caching in `getLinks` to enhance link data fetching efficiency.
- Refactored `remark-link-card` to utilize environment-based configurations for OG fetching.
- Created a new caching utility in `lib/server/cache.ts` to manage cache entries and expiration.
- Added sitemap and RSS generation functions in `lib/server/site-files.ts` with improved structure.
- Updated favicon handling in scripts to streamline the process of ensuring favicon availability.
- Removed deprecated `_app.tsx` file and adjusted related components accordingly.
- Added tests for caching functionality and environment configuration helpers.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev:test": "bun scripts/ensure-favicon.ts && next dev --port 3000",
     "build": "bun scripts/ensure-favicon.ts && next build && bun run gen:sitemap",
     "start": "serve out -p 3000",
-    "lint": "next lint",
+    "lint": "eslint . --ext js,jsx,ts,tsx",
     "gen:sitemap": "bun scripts/generate-sitemap.ts",
     "optimize:images": "bun scripts/optimize-images.ts",
     "vitest:run": "vitest run",
