feat: add dynamicParams flag and implement sitemap and RSS generation scripts

--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
   "packageManager": "bun@1.1.24",
   "scripts": {
     "dev": "bun scripts/ensure-favicon.ts && next dev",
-    "dev:test": "bun scripts/ensure-favicon.ts && next dev --port 3000",
-    "build": "bun scripts/ensure-favicon.ts && next build && bun run gen:sitemap",
+    "dev:test": "bun scripts/ensure-favicon.ts && next dev --port 3100",
+    "build": "bun scripts/ensure-favicon.ts && next build && bun run gen:sitemap && bun scripts/generate-rss.ts",
     "start": "serve out -p 3000",
     "lint": "eslint . --ext js,jsx,ts,tsx",
-    "gen:sitemap": "bun scripts/generate-sitemap.ts",
+    "gen:sitemap": "bun build next-sitemap.config.mts --target node --outfile .next-sitemap.config.mjs && next-sitemap --config .next-sitemap.config.mjs && rm .next-sitemap.config.mjs",
     "optimize:images": "bun scripts/optimize-images.ts",
     "vitest:run": "vitest run",
     "vitest:watch": "vitest",
-    "e2e:run": "bun run e2e:install && bunx start-server-and-test \"bun run dev:test\" http://127.0.0.1:3000 \"CYPRESS_CACHE_FOLDER=.cache/cypress ./node_modules/.bin/cypress run --e2e --browser chrome --headless\"",
-    "e2e:open": "bun run e2e:install && bunx start-server-and-test \"bun run dev:test\" http://127.0.0.1:3000 \"CYPRESS_CACHE_FOLDER=.cache/cypress ./node_modules/.bin/cypress open --e2e\"",
+    "e2e:run": "bun run e2e:install && bunx start-server-and-test \"bun run dev:test\" http://127.0.0.1:3100 \"CYPRESS_CACHE_FOLDER=.cache/cypress ./node_modules/.bin/cypress run --e2e --browser chrome --headless\"",
+    "e2e:open": "bun run e2e:install && bunx start-server-and-test \"bun run dev:test\" http://127.0.0.1:3100 \"CYPRESS_CACHE_FOLDER=.cache/cypress ./node_modules/.bin/cypress open --e2e\"",
     "e2e:chrome": "CYPRESS_CACHE_FOLDER=.cache/cypress ./node_modules/.bin/cypress run --e2e --browser chrome --headless",
     "e2e:edge": "CYPRESS_CACHE_FOLDER=.cache/cypress ./node_modules/.bin/cypress run --e2e --browser edge",
     "e2e:electron": "CYPRESS_CACHE_FOLDER=.cache/cypress ./node_modules/.bin/cypress run --e2e --browser electron",
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "clsx": "2.1.1",
+    "feed": "4.2.2",
     "fuse.js": "7.1.0",
     "github-slugger": "2.0.0",
     "gray-matter": "4.0.3",
@@ -59,6 +60,7 @@
     "eslint": "9.35.0",
     "eslint-config-next": "15.5.2",
     "jsdom": "26.1.0",
+    "next-sitemap": "^4.2.3",
     "postcss": "8.5.6",
     "serve": "14.2.5",
     "start-server-and-test": "2.0.5",
