--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "optimize:images": "bun scripts/optimize-images.ts",
     "vitest:run": "vitest run",
     "vitest:watch": "vitest",
-    "e2e:run": "bun run e2e:install && bunx start-server-and-test \"bun run dev:test\" http://127.0.0.1:3000 \"CYPRESS_CACHE_FOLDER=.cache/cypress ./node_modules/.bin/cypress run --e2e --browser chrome --headless\"",
-    "e2e:open": "bun run e2e:install && bunx start-server-and-test \"bun run dev:test\" http://127.0.0.1:3000 \"CYPRESS_CACHE_FOLDER=.cache/cypress ./node_modules/.bin/cypress open --e2e\"",
-    "e2e:chrome": "CYPRESS_CACHE_FOLDER=.cache/cypress ./node_modules/.bin/cypress run --e2e --browser chrome --headless",
-    "e2e:edge": "CYPRESS_CACHE_FOLDER=.cache/cypress ./node_modules/.bin/cypress run --e2e --browser edge",
-    "e2e:electron": "CYPRESS_CACHE_FOLDER=.cache/cypress ./node_modules/.bin/cypress run --e2e --browser electron",
-    "e2e:firefox": "CYPRESS_CACHE_FOLDER=.cache/cypress ./node_modules/.bin/cypress run --e2e --browser firefox",
-    "e2e:install": "CYPRESS_CACHE_FOLDER=.cache/cypress bunx cypress install",
+    "e2e:run": "bun run e2e:install && bunx start-server-and-test \"bun run dev:test\" http://127.0.0.1:3000 \"bunx cypress run --e2e --browser chrome --headless\"",
+    "e2e:open": "bun run e2e:install && bunx start-server-and-test \"bun run dev:test\" http://127.0.0.1:3000 \"bunx cypress open --e2e\"",
+    "e2e:chrome": "bunx cypress run --e2e --browser chrome --headless",
+    "e2e:edge": "bunx cypress run --e2e --browser edge",
+    "e2e:electron": "bunx cypress run --e2e --browser electron",
+    "e2e:firefox": "bunx cypress run --e2e --browser firefox",
+    "e2e:install": "bunx cypress install",
     "test": "bun run vitest:run && bun run e2e:run"
   },
   "dependencies": {
@@ -56,7 +56,7 @@
     "@types/node": "24.3.1",
     "@types/react": "19.1.12",
     "@types/react-dom": "19.1.9",
-    "cypress": "15.2.0",
+    "cypress": "15.6.0",
     "eslint": "9.35.0",
     "eslint-config-next": "15.5.2",
     "jsdom": "26.1.0",
