feat: migrate to Storybook setup with initial configuration and stories

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "lint": "eslint . --ext js,jsx,ts,tsx",
     "gen:sitemap": "bun build next-sitemap.config.mts --target node --outfile .next-sitemap.config.mjs && next-sitemap --config .next-sitemap.config.mjs && rm .next-sitemap.config.mjs",
     "optimize:images": "bun scripts/optimize-images.ts",
+    "storybook": "storybook dev -p 6006",
+    "storybook:build": "storybook build",
     "vitest:run": "vitest run",
     "vitest:watch": "vitest",
     "e2e:run": "bun run e2e:install && bunx start-server-and-test \"bun run dev:test\" http://127.0.0.1:3000 \"bunx cypress run --e2e --browser chrome --headless\"",
@@ -48,6 +50,12 @@
     "zod": "4.1.5"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "8.4.5",
+    "@storybook/addon-interactions": "8.4.5",
+    "@storybook/blocks": "8.4.5",
+    "@storybook/nextjs": "8.4.5",
+    "@storybook/react": "8.4.5",
+    "@storybook/test": "8.4.5",
     "@tailwindcss/postcss": "^4.1.13",
     "@tailwindcss/typography": "0.5.16",
     "@testing-library/jest-dom": "6.8.0",
@@ -64,6 +72,7 @@
     "postcss": "8.5.6",
     "serve": "14.2.5",
     "start-server-and-test": "2.0.5",
+    "storybook": "8.4.5",
     "tailwindcss": "^4.1.13",
     "typescript": "5.9.2",
     "vite-tsconfig-paths": "5.1.4",
