--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
     "fuse.js": "7.1.0",
     "github-slugger": "2.0.0",
     "gray-matter": "4.0.3",
-    "next": "15.5.2",
+    "next": "15",
     "next-themes": "0.4.6",
-    "react": "19.1.1",
-    "react-dom": "19.1.1",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-social-media-embed": "^2.5.18",
     "rehype": "13.0.2",
     "rehype-autolink-headings": "7.1.0",
@@ -56,25 +56,25 @@
     "@storybook/nextjs": "8.4.5",
     "@storybook/react": "8.4.5",
     "@storybook/test": "8.4.5",
-    "@tailwindcss/postcss": "^4.1.13",
-    "@tailwindcss/typography": "0.5.16",
+    "@tailwindcss/postcss": "^4.1.17",
+    "@tailwindcss/typography": "^0.5.19",
     "@testing-library/jest-dom": "6.8.0",
     "@testing-library/react": "16.3.0",
     "@testing-library/user-event": "14.6.1",
-    "@types/node": "24.3.1",
-    "@types/react": "19.1.12",
-    "@types/react-dom": "19.1.9",
+    "@types/node": "^24.10.1",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "cypress": "15.6.0",
     "eslint": "9.35.0",
-    "eslint-config-next": "15.5.2",
+    "eslint-config-next": "^16.0.4",
     "jsdom": "26.1.0",
     "next-sitemap": "^4.2.3",
     "postcss": "8.5.6",
     "serve": "14.2.5",
     "start-server-and-test": "2.0.5",
     "storybook": "8.4.5",
-    "tailwindcss": "^4.1.13",
-    "typescript": "5.9.2",
+    "tailwindcss": "^4.1.17",
+    "typescript": "^5.9.3",
     "vite-tsconfig-paths": "5.1.4",
     "vitest": "3.2.4"
   },
