fix: update eslint and eslint-config-next versions for improved linting

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev:test": "bun scripts/ensure-favicon.ts && next dev --port 3000",
     "build": "bun scripts/ensure-favicon.ts && next build && bun run gen:sitemap && bun scripts/generate-rss.ts",
     "start": "serve out -p 3000",
-    "lint": "eslint . --ext js,jsx,ts,tsx",
+    "lint": "eslint .",
     "gen:sitemap": "bun build next-sitemap.config.mts --target node --outfile .next-sitemap.config.mjs && next-sitemap --config .next-sitemap.config.mjs && rm .next-sitemap.config.mjs",
     "optimize:images": "bun scripts/optimize-images.ts",
     "storybook": "storybook dev -p 6006",
@@ -66,7 +66,7 @@
     "@types/react-dom": "^19.2.3",
     "cypress": "15.6.0",
     "eslint": "9.35.0",
-    "eslint-config-next": "^16.0.4",
+    "eslint-config-next": "15.5.2",
     "jsdom": "26.1.0",
     "next-sitemap": "^4.2.3",
     "postcss": "8.5.6",
