feat: add publication management and external link handling
- Implemented publication retrieval with `getAllPublications` in `publication.ts`.
- Added `rehypeExternalLinks` to manage external link attributes.
- Created `rehypeImgDefaults` for default image attributes in `<img>` tags.
- Developed `remarkLinkCard` for generating link cards from URLs with Open Graph data.
- Introduced types for blog and publication frontmatter in `types.ts`.
- Added link management with `getLinks` in `links.ts`.
- Implemented date formatting utility in `date.ts`.
- Set up internationalization support in `i18n.ts`.
- Enhanced SEO metadata generation in `seo.ts`.
- Established caching mechanism in `cache.ts`.
- Created utility functions for URL handling in `url.ts`.
- Added English and Japanese locale support in `common.json`.
- Defined types for Squoosh library in `squoosh-lib.d.ts`.
- Updated TypeScript configuration for improved path resolution.
- Adjusted Vitest configuration for alias resolution.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
     "baseUrl": ".",
     "paths": {
       "@/*": [
-        "./*"
+        "./src/*"
       ]
     },
     "types": [
@@ -35,11 +35,8 @@
   },
   "include": [
     "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    "types/**/*.d.ts",
-    "**/*.cjs",
-    "**/*.mjs",
+    "src/**/*",
+    "scripts/**/*",
     ".next/types/**/*.ts"
   ],
   "exclude": [
