fix: Restrict deployment branch to main only in Cloudflare Pages workflow

--- a/.github/workflows/deploy-cloudflare.yml
+++ b/.github/workflows/deploy-cloudflare.yml
@@ -2,7 +2,7 @@ name: Deploy to Cloudflare Pages
 
 on:
   push:
-    branches: ["main", "feature/cloudflare-pages"]
+    branches: ["main"]
   workflow_dispatch:
 
 permissions:
