feat: Allow deployment from both main and develop branches in Cloudflare Pages workflow

--- a/.github/workflows/deploy-cloudflare.yml
+++ b/.github/workflows/deploy-cloudflare.yml
@@ -2,7 +2,7 @@ name: Deploy to Cloudflare Pages
 
 on:
   push:
-    branches: ["main"]
+    branches: ["main", "develop"]
   workflow_dispatch:
 
 permissions:
@@ -38,7 +38,11 @@ jobs:
 
       - name: Build Next.js
         env:
-          SITE_URL: ${{ secrets.CLOUDFLARE_SITE_URL || format('https://{0}.pages.dev', secrets.CLOUDFLARE_PAGES_PROJECT) }}
+          SITE_URL: ${{ github.ref_name == 'main'
+            && (secrets.CLOUDFLARE_SITE_URL || format('https://{0}.pages.dev', secrets.CLOUDFLARE_PAGES_PROJECT))
+            || github.ref_name == 'develop'
+            && (secrets.CLOUDFLARE_SITE_URL_DEVELOP || format('https://develop.{0}.pages.dev', secrets.CLOUDFLARE_PAGES_PROJECT))
+            || format('https://{0}.{1}.pages.dev', github.ref_name, secrets.CLOUDFLARE_PAGES_PROJECT) }}
           NEXT_PUBLIC_BASE_PATH: ${{ secrets.CLOUDFLARE_BASE_PATH || '' }}
           NEXT_PUBLIC_ASSET_VERSION: ${{ github.sha }}
           INCLUDE_DRAFTS: 'false'
