--- a/.github/workflows/disabels/deploy-github.yml
+++ b/.github/workflows/disabels/deploy-github.yml
@@ -14,8 +14,12 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
+  tests:
+    uses: ./.github/workflows/ci-tests.yml
+
   build:
     runs-on: ubuntu-latest
+    needs: tests
     steps:
       - name: Checkout
         uses: actions/checkout@v4
