--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,23 @@ src/data/og-cache.json
 .cache
 cypress/screenshots
 cypress/downloads
+
+# next-image-export-optimizer
+/public/nextImageExportOptimizer
+/public/next-image-export-optimizer-hashes.json
+
+# local env files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# testing
+coverage/
+
+# storybook
+storybook-static/
+
+# custom scripts output
+public/images/
