fix: remove headless option from Cypress e2e commands for better debugging

--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "storybook:build": "storybook build",
     "vitest:run": "vitest run",
     "vitest:watch": "vitest",
-    "e2e:run": "bun run e2e:install && bunx start-server-and-test \"bun run dev:test\" http://127.0.0.1:3000 \"bunx cypress run --e2e --browser chrome --headless\"",
+    "e2e:run": "bun run e2e:install && bunx start-server-and-test \"bun run dev:test\" http://127.0.0.1:3000 \"bunx cypress run --e2e --browser chrome\"",
     "e2e:open": "bun run e2e:install && bunx start-server-and-test \"bun run dev:test\" http://127.0.0.1:3000 \"bunx cypress open --e2e\"",
-    "e2e:chrome": "bunx cypress run --e2e --browser chrome --headless",
+    "e2e:chrome": "bunx cypress run --e2e --browser chrome",
     "e2e:edge": "bunx cypress run --e2e --browser edge",
     "e2e:electron": "bunx cypress run --e2e --browser electron",
     "e2e:firefox": "bunx cypress run --e2e --browser firefox",
