--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "next": "15",
     "next-image-export-optimizer": "^1.19.0",
     "next-themes": "0.4.6",
+    "nuqs": "^2.8.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-social-media-embed": "^2.5.18",
