--- a/package.json
+++ b/package.json
@@ -6,10 +6,9 @@
   "scripts": {
     "dev": "bun scripts/ensure-favicon.ts && next dev",
     "dev:test": "bun scripts/ensure-favicon.ts && next dev --port 3000",
-    "build": "bun scripts/ensure-favicon.ts && next build && next-image-export-optimizer && bun run gen:sitemap && bun scripts/generate-rss.ts",
+    "build": "bun scripts/ensure-favicon.ts && next build && next-image-export-optimizer && bun scripts/generate-rss.ts",
     "start": "serve out -p 3000",
     "lint": "eslint .",
-    "gen:sitemap": "bun build next-sitemap.config.mts --target node --outfile .next-sitemap.config.mjs && next-sitemap --config .next-sitemap.config.mjs && rm .next-sitemap.config.mjs",
     "storybook": "storybook dev -p 6006",
     "storybook:build": "storybook build",
     "vitest:run": "vitest run --pool threads --poolOptions.threads.singleThread",
@@ -73,7 +72,6 @@
     "eslint": "9.35.0",
     "eslint-config-next": "15.5.2",
     "jsdom": "26.1.0",
-    "next-sitemap": "^4.2.3",
     "postcss": "8.5.6",
     "serve": "14.2.5",
     "start-server-and-test": "2.0.5",
