--- a/package.json
+++ b/package.json
@@ -5,24 +5,24 @@
   "packageManager": "bun@1.1.24",
   "scripts": {
     "dev": "bun scripts/ensure-favicon.ts && next dev",
-    "dev:test": "bun scripts/ensure-favicon.ts && next dev --port 3000",
     "build": "bun scripts/ensure-favicon.ts && next build && next-image-export-optimizer && bun scripts/generate-rss.ts",
     "start": "serve out -p 3000",
     "lint": "eslint .",
-    "storybook": "storybook dev -p 6006",
-    "storybook:build": "storybook build",
+    "test": "bun run vitest:run && bun run e2e:run",
     "vitest:run": "vitest run --pool threads --poolOptions.threads.singleThread",
     "vitest:watch": "vitest",
-    "e2e:run": "bun run e2e:install && bunx start-server-and-test \"bun run dev:test\" http://127.0.0.1:3000 \"bunx cypress run --e2e --browser chrome\"",
-    "e2e:open": "bun run e2e:install && bunx start-server-and-test \"bun run dev:test\" http://127.0.0.1:3000 \"bunx cypress open --e2e\"",
+    "e2e:dev": "bun scripts/ensure-favicon.ts && next dev --port 3000",
+    "e2e:install": "bunx cypress install",
+    "e2e:run": "bun run e2e:install && bunx start-server-and-test \"bun run e2e:dev\" http://127.0.0.1:3000 \"bunx cypress run --e2e --browser chrome\"",
+    "e2e:open": "bun run e2e:install && bunx start-server-and-test \"bun run e2e:dev\" http://127.0.0.1:3000 \"bunx cypress open --e2e\"",
     "e2e:chrome": "bunx cypress run --e2e --browser chrome",
     "e2e:edge": "bunx cypress run --e2e --browser edge",
     "e2e:electron": "bunx cypress run --e2e --browser electron",
     "e2e:firefox": "bunx cypress run --e2e --browser firefox",
-    "e2e:install": "bunx cypress install",
     "lhci:mobile": "lhci autorun",
     "lhci:desktop": "lhci autorun --collect.settings.preset=desktop",
-    "test": "bun run vitest:run && bun run e2e:run"
+    "storybook": "storybook dev -p 6006",
+    "storybook:build": "storybook build"
   },
   "dependencies": {
     "babel-plugin-react-compiler": "^1.0.0",
