feat: update favicon settings and remove deprecated scripts

--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "private": true,
   "packageManager": "bun@1.1.24",
   "scripts": {
-    "dev": "bun scripts/ensure-favicon.ts && next dev",
-    "build": "bun scripts/ensure-favicon.ts && next build && next-image-export-optimizer && bun scripts/generate-rss.ts",
+    "dev": "next dev",
+    "build": "next build && next-image-export-optimizer && bun scripts/generate-rss.ts",
     "start": "serve out -p 3000",
     "lint": "eslint .",
     "test": "bun run vitest:run && bun run e2e:run",
     "vitest:run": "vitest run --pool threads --poolOptions.threads.singleThread",
     "vitest:watch": "vitest",
-    "e2e:dev": "bun scripts/ensure-favicon.ts && next dev --port 3000",
+    "e2e:dev": "next dev --port 3000",
     "e2e:install": "bunx cypress install",
     "e2e:run": "bun run e2e:install && bunx start-server-and-test \"bun run e2e:dev\" http://127.0.0.1:3000 \"bunx cypress run --e2e --browser chrome\"",
     "e2e:open": "bun run e2e:install && bunx start-server-and-test \"bun run e2e:dev\" http://127.0.0.1:3000 \"bunx cypress open --e2e\"",
