feat: migrate end-to-end tests from Cypress to Playwright and update configurations

--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -39,12 +39,12 @@ jobs:
         run: bun run vitest:run
 
   e2e-test:
-    name: E2E Tests (${{ matrix.browser }})
+    name: E2E Tests (${{ matrix.project }})
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        browser: [chrome, firefox, edge]
+        project: [chromium, firefox, webkit]
     steps:
       - uses: actions/checkout@v4
       - uses: oven-sh/setup-bun@v1
@@ -52,7 +52,7 @@ jobs:
           bun-version: latest
       - name: Install dependencies
         run: bun install --frozen-lockfile
-      - name: Install Cypress binary
-        run: bun run e2e:install
+      - name: Install Playwright browsers
+        run: bunx playwright install --with-deps ${{ matrix.project }}
       - name: Run E2E tests
-        run: bunx start-server-and-test "bun run e2e:dev" http://127.0.0.1:3000 "bunx cypress run --e2e --browser ${{ matrix.browser }}"
+        run: bunx playwright test --project=${{ matrix.project }}
