--- a/package.json
+++ b/package.json
@@ -13,13 +13,12 @@
     "vitest:run": "vitest run --pool threads --poolOptions.threads.singleThread",
     "vitest:watch": "vitest",
     "e2e:dev": "next dev --port 3000",
-    "e2e:install": "bunx cypress install",
-    "e2e:run": "bun run e2e:install && bunx start-server-and-test \"bun run e2e:dev\" http://127.0.0.1:3000 \"bunx cypress run --e2e --browser chrome\"",
-    "e2e:open": "bun run e2e:install && bunx start-server-and-test \"bun run e2e:dev\" http://127.0.0.1:3000 \"bunx cypress open --e2e\"",
-    "e2e:chrome": "bunx cypress run --e2e --browser chrome",
-    "e2e:edge": "bunx cypress run --e2e --browser edge",
-    "e2e:electron": "bunx cypress run --e2e --browser electron",
-    "e2e:firefox": "bunx cypress run --e2e --browser firefox",
+    "e2e:install": "bunx playwright install chromium firefox webkit",
+    "e2e:run": "bun run e2e:install && bunx playwright test --project=chromium",
+    "e2e:open": "bun run e2e:install && bunx playwright test --ui --headed --project=chromium",
+    "e2e:chromium": "bun run e2e:install && bunx playwright test --project=chromium",
+    "e2e:firefox": "bun run e2e:install && bunx playwright test --project=firefox",
+    "e2e:webkit": "bun run e2e:install && bunx playwright test --project=webkit",
     "lhci:mobile": "lhci autorun",
     "lhci:desktop": "lhci autorun --collect.settings.preset=desktop",
     "storybook": "storybook dev -p 6006",
@@ -54,6 +53,7 @@
     "zod": "4.1.5"
   },
   "devDependencies": {
+    "@playwright/test": "1.51.1",
     "@lhci/cli": "^0.15.1",
     "@next/bundle-analyzer": "^16.0.6",
     "@storybook/addon-essentials": "8.4.5",
@@ -70,13 +70,11 @@
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
-    "cypress": "15.6.0",
     "eslint": "9.35.0",
     "eslint-config-next": "15.5.2",
     "jsdom": "26.1.0",
     "postcss": "8.5.6",
     "serve": "14.2.5",
-    "start-server-and-test": "2.0.5",
     "storybook": "8.4.5",
     "tailwindcss": "^4.1.17",
     "typescript": "^5.9.3",
