--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,7 +37,8 @@
     "next-env.d.ts",
     "src/**/*",
     "scripts/**/*",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    ".next/dev/types/**/*.ts"
   ],
   "exclude": [
     "node_modules",
