--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "next build && next-image-export-optimizer && bun scripts/generate-rss.ts",
     "build:analyze": "ANALYZE=true next build",
     "start": "serve out -p 3000",
-    "lint": "eslint .",
+    "lint": "biome check .",
     "test": "bun run vitest:run && bun run e2e:run",
     "vitest:run": "vitest run --pool threads --poolOptions.threads.singleThread",
     "vitest:watch": "vitest",
@@ -53,6 +53,7 @@
     "zod": "4.1.5"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.9.4",
     "@playwright/test": "1.51.1",
     "@lhci/cli": "^0.15.1",
     "@next/bundle-analyzer": "^16.0.6",
@@ -70,8 +71,6 @@
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
-    "eslint": "9.35.0",
-    "eslint-config-next": "15.5.2",
     "jsdom": "26.1.0",
     "postcss": "8.5.6",
     "serve": "14.2.5",
